syntax = "proto3";

service CustomerService {
    rpc GetAll (Empty) returns (CustomerList) {}
    rpc Get (CustomerRequestId) returns (Customer) {}
    rpc Insert (Customer) returns (Customer) {}
    rpc Update (Customer) returns (Customer) {}
    rpc Remove (CustomerRequestId) returns (Empty) {}
}

message Empty {}

message Customer {
    string id = 1;
    string name = 2;
    int32 age = 3;
    string address = 4;
}

message CustomerList {
    repeated Customer customers = 1;
}

message CustomerRequestId {
    string id = 1;
}

service WorkerService {
    rpc GetAllWorkers (Empty) returns (WorkerList) {}
    rpc GetWorker (WorkerRequestId) returns (Worker) {}
    rpc InsertWorker (Worker) returns (Worker) {}
    rpc UpdateWorker (Worker) returns (Worker) {}
    rpc RemoveWorker (WorkerRequestId) returns (Empty) {}
}

message Worker {
    string id = 1;
    string name = 2;
    int32 age = 3;
    string address = 4;
}

message WorkerList {
    repeated Worker workers = 1;
}

message WorkerRequestId {
    string id = 1;
}
